[gd_scene load_steps=8 format=2]

[ext_resource path="res://game/scene/launcher/Connexion.tscn" type="PackedScene" id=1]
[ext_resource path="res://game/scene/launcher/Inscription.tscn" type="PackedScene" id=2]
[ext_resource path="res://game/scene/launcher/Log.tscn" type="PackedScene" id=3]
[ext_resource path="res://game/scene/launcher/News.tscn" type="PackedScene" id=4]
[ext_resource path="res://game/script/launcher/Launcher.gd" type="Script" id=5]
[ext_resource path="res://game/asset/graphic/backgrounds/mountains-between-us_1920x1080.png" type="Texture" id=6]
[ext_resource path="res://game/scene/launcher/Detail.tscn" type="PackedScene" id=7]

[node name="Launcher" type="Node2D"]
script = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 530.133, 300.221 )
scale = Vector2( 0.552083, 0.555556 )
texture = ExtResource( 6 )

[node name="Connexion" parent="." instance=ExtResource( 1 )]
position = Vector2( 608, 176 )

[node name="LinkToSubscribe" type="LinkButton" parent="Connexion"]
margin_left = 20.0
margin_top = 200.0
margin_right = 78.0
margin_bottom = 214.0
text = "S'inscrire"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Inscription" parent="." instance=ExtResource( 2 )]
position = Vector2( 608, 120 )
z_index = 1

[node name="LinkToConnect" type="LinkButton" parent="Inscription"]
margin_left = 18.0
margin_top = 390.0
margin_right = 101.0
margin_bottom = 404.0
text = "Se connecter"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Log" parent="." instance=ExtResource( 3 )]
margin_left = 96.0
margin_top = 344.0
margin_right = 446.0
margin_bottom = 504.0

[node name="News" parent="." instance=ExtResource( 4 )]
margin_left = 96.0
margin_top = 120.0
margin_right = 446.0
margin_bottom = 280.0

[node name="Panel" type="Panel" parent="."]
visible = false
margin_left = 304.0
margin_top = 16.0
margin_right = 720.0
margin_bottom = 64.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel"]
margin_top = 8.0
margin_right = 416.0
margin_bottom = 48.0
text = "Le serveur est injoignable pour le moment, 
veuillez verifier votre connexion internet et relancer le jeux"
align = 1

[node name="HTTPRequest" type="HTTPRequest" parent="."]
timeout = 5

[node name="Detail" parent="." instance=ExtResource( 7 )]
margin_left = 8.0
margin_top = 16.0
margin_right = 48.0
margin_bottom = 30.0
[connection signal="pressed" from="Connexion/LinkToSubscribe" to="." method="_on_LinkToSubscribe_pressed"]
[connection signal="pressed" from="Inscription/LinkToConnect" to="." method="_on_LinkToConnect_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
